5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1752_1522.log
== TEST (2019-05-16 17:08:29) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(qi<0):
	con=cont+dm+qm+qr
	acu=qi-acu
	
	cont=cont+1
print(cont)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:09:13) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(qi<0):
	con=cont+dm+qm+qr
	acum=qi-acu
	
	cont=cont+1
print(acum)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:10:32) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=1

while(qi<0):
	con=cont+dm+qm+qr
	acum=qi-acu
	
	cont=cont+1
print(acum)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:10:57) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
acum=1

while(qi<0):
	con=cont+dm+qm+qr
	acum=qi-acu
	
	cont=cont+1
print(acum)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:12:12) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
acum=1

while(qi<0):
	con=cont+dm+qm+qr
	acum=qi/acu
	
	cont=cont+1
print(acum)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:12:32) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
acum=1

while(qi<0):
	con=cont+dm+qm+qr
	acum=qi/acum
	
	cont=cont+1
print(acum)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:13:04) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
acum=1

while(qi<0):
	con=cont+dm+qm+qr
	acum=cont/qi
	
	cont=cont+1
print(acum)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:14:09) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
acum=1

while(qi<0):
	cont=dm+qm+qr
	acumulado=cont/qi
	
	cont=cont+1
print(acumulado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(acumulado)
NameError: name 'acumulado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:14:37) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
acum=1

while(qi<0):
	cont=dm+qm+qr
	acum=cont/qi
	
	cont=cont+1
print(acum)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:15:01) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
acum=0

while(qi<0):
	cont=dm+qm+qr
	acum=cont/qi
	
	cont=cont+1
print(acum)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:16:06) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(qi<0):
	cont=dm+qm+qr
	acum=cont/qi
	
	cont=cont+1
print(acum)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:16:30) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(qi<=0):
	cont=dm+qm+qr
	acum=cont/qi
	
	cont=cont+1
print(acum)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:16:42) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(qi==0):
	cont=dm+qm+qr
	acum=cont/qi
	
	cont=cont+1
print(acum)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:17:39) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum==0):
	cont=dm+qm+qr
	acum=cont/qi
	
	cont=cont+1
print(acum)
-- OUTPUT:
0.7675
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:18:03) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum==0):
	cont=dm+qm+qr
	acum=qi/cont
	
	cont=cont+1
print(acum)
-- OUTPUT:
1.3029315960912051
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:25) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum==0):
	cont=dm+qm+qr
	acum=qi+cont/cont
	
	cont=cont+1
print(acum)
-- OUTPUT:
8001.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:31:10) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum!=0):
	cont=dm+qm+qr
	acum=qi-cont
	
	cont=cont+1
print(acum)
-- OUTPUT:
8001.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:31:47) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum!=0):
	cont=cont+dm+qm+qr
	acum=qi-cont
	
	cont=cont+1
print(acum)
-- OUTPUT:
8001.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:39:24) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum<qi):
	cont=cont+dm+qm+qr
	acum=qi-cont
	
	cont=cont+1
print(acum)
-- OUTPUT:
8001.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:40:00) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum<qi):
	cont=cont+dm+qm+qr
	acum=qi-cont
	
	cont=cont+1
	print(acum)
-- OUTPUT:
1860
-4281
-10422
-16563
-22704
-28845
-34986
-41127
-47268
-53409
-59550
-65691
-71832
-77973
-84114
-90255
-96396
-102537
-108678
-114819
-120960
-127101
-133242
-139383
-145524
-151665
-157806
-163947
-170088
-176229
-182370
-188511
-194652
-200793
-206934
-213075
-219216
-225357
-231498
-237639
-243780
-249921
-256062
-262203
-268344
-274485
-280626
-286767
-292908
-299049
-305190
-311331
-317472
-323613
-329754
-335895
-342036
-348177
-354318
-360459
-366600
-372741
-378882
-385023
-391164
-397305
-403446
-409587
-415728
-421869
-428010
-434151
-440292
-446433
-452574
-458715
-464856
-470997
-477138
-483279
-489420
-495561
-501702
-507843
-513984
-520125
-526266
-532407
-538548
-544689
-550830
-556971
-563112
-569253
-575394
-581535
-587676
-593817
-599958
-606099
-612240
-618381
-624522
-630663
-636804
-642945
-649086
-655227
-661368
-667509
-673650
-679791
-685932
-692073
-698214
-704355
-710496
-716637
-722778
-728919
-735060
-741201
-747342
-753483
-759624
-765765
-771906
-778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:41:06) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum<qi):
	cont=cont+dm+qm+qr
	acum=qi-cont
	
	cont=cont+1
print(acum)
-- OUTPUT:
1860
-4281
-10422
-16563
-22704
-28845
-34986
-41127
-47268
-53409
-59550
-65691
-71832
-77973
-84114
-90255
-96396
-102537
-108678
-114819
-120960
-127101
-133242
-139383
-145524
-151665
-157806
-163947
-170088
-176229
-182370
-188511
-194652
-200793
-206934
-213075
-219216
-225357
-231498
-237639
-243780
-249921
-256062
-262203
-268344
-274485
-280626
-286767
-292908
-299049
-305190
-311331
-317472
-323613
-329754
-335895
-342036
-348177
-354318
-360459
-366600
-372741
-378882
-385023
-391164
-397305
-403446
-409587
-415728
-421869
-428010
-434151
-440292
-446433
-452574
-458715
-464856
-470997
-477138
-483279
-489420
-495561
-501702
-507843
-513984
-520125
-526266
-532407
-538548
-544689
-550830
-556971
-563112
-569253
-575394
-581535
-587676
-593817
-599958
-606099
-612240
-618381
-624522
-630663
-636804
-642945
-649086
-655227
-661368
-667509
-673650
-679791
-685932
-692073
-698214
-704355
-710496
-716637
-722778
-728919
-735060
-741201
-747342
-753483
-759624
-765765
-771906
-778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:41:21) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum<qi):
	cont=cont+dm+qm+qr
	acum=qi-cont
	
	cont=cont+1
print(acum)
-- OUTPUT:
1860
-4281
-10422
-16563
-22704
-28845
-34986
-41127
-47268
-53409
-59550
-65691
-71832
-77973
-84114
-90255
-96396
-102537
-108678
-114819
-120960
-127101
-133242
-139383
-145524
-151665
-157806
-163947
-170088
-176229
-182370
-188511
-194652
-200793
-206934
-213075
-219216
-225357
-231498
-237639
-243780
-249921
-256062
-262203
-268344
-274485
-280626
-286767
-292908
-299049
-305190
-311331
-317472
-323613
-329754
-335895
-342036
-348177
-354318
-360459
-366600
-372741
-378882
-385023
-391164
-397305
-403446
-409587
-415728
-421869
-428010
-434151
-440292
-446433
-452574
-458715
-464856
-470997
-477138
-483279
-489420
-495561
-501702
-507843
-513984
-520125
-526266
-532407
-538548
-544689
-550830
-556971
-563112
-569253
-575394
-581535
-587676
-593817
-599958
-606099
-612240
-618381
-624522
-630663
-636804
-642945
-649086
-655227
-661368
-667509
-673650
-679791
-685932
-692073
-698214
-704355
-710496
-716637
-722778
-728919
-735060
-741201
-747342
-753483
-759624
-765765
-771906
-778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:31) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum<qi):
	acum=dm+qm+qr
	cont=qi-cont
	cont=cont+1
print(acum)
-- OUTPUT:
1860
-4281
-10422
-16563
-22704
-28845
-34986
-41127
-47268
-53409
-59550
-65691
-71832
-77973
-84114
-90255
-96396
-102537
-108678
-114819
-120960
-127101
-133242
-139383
-145524
-151665
-157806
-163947
-170088
-176229
-182370
-188511
-194652
-200793
-206934
-213075
-219216
-225357
-231498
-237639
-243780
-249921
-256062
-262203
-268344
-274485
-280626
-286767
-292908
-299049
-305190
-311331
-317472
-323613
-329754
-335895
-342036
-348177
-354318
-360459
-366600
-372741
-378882
-385023
-391164
-397305
-403446
-409587
-415728
-421869
-428010
-434151
-440292
-446433
-452574
-458715
-464856
-470997
-477138
-483279
-489420
-495561
-501702
-507843
-513984
-520125
-526266
-532407
-538548
-544689
-550830
-556971
-563112
-569253
-575394
-581535
-587676
-593817
-599958
-606099
-612240
-618381
-624522
-630663
-636804
-642945
-649086
-655227
-661368
-667509
-673650
-679791
-685932
-692073
-698214
-704355
-710496
-716637
-722778
-728919
-735060
-741201
-747342
-753483
-759624
-765765
-771906
-778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:48) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum<qi):
	cont=dm+qm+qr
	acum=qi-cont
	cont=cont+1
print(acum)
-- OUTPUT:
1860
-4281
-10422
-16563
-22704
-28845
-34986
-41127
-47268
-53409
-59550
-65691
-71832
-77973
-84114
-90255
-96396
-102537
-108678
-114819
-120960
-127101
-133242
-139383
-145524
-151665
-157806
-163947
-170088
-176229
-182370
-188511
-194652
-200793
-206934
-213075
-219216
-225357
-231498
-237639
-243780
-249921
-256062
-262203
-268344
-274485
-280626
-286767
-292908
-299049
-305190
-311331
-317472
-323613
-329754
-335895
-342036
-348177
-354318
-360459
-366600
-372741
-378882
-385023
-391164
-397305
-403446
-409587
-415728
-421869
-428010
-434151
-440292
-446433
-452574
-458715
-464856
-470997
-477138
-483279
-489420
-495561
-501702
-507843
-513984
-520125
-526266
-532407
-538548
-544689
-550830
-556971
-563112
-569253
-575394
-581535
-587676
-593817
-599958
-606099
-612240
-618381
-624522
-630663
-636804
-642945
-649086
-655227
-661368
-667509
-673650
-679791
-685932
-692073
-698214
-704355
-710496
-716637
-722778
-728919
-735060
-741201
-747342
-753483
-759624
-765765
-771906
-778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:03) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum<qi):
	cont=dm+qm+qr
	acum=qi-cont
	cont=cont+1
print(acum)
-- OUTPUT:
1860
-4281
-10422
-16563
-22704
-28845
-34986
-41127
-47268
-53409
-59550
-65691
-71832
-77973
-84114
-90255
-96396
-102537
-108678
-114819
-120960
-127101
-133242
-139383
-145524
-151665
-157806
-163947
-170088
-176229
-182370
-188511
-194652
-200793
-206934
-213075
-219216
-225357
-231498
-237639
-243780
-249921
-256062
-262203
-268344
-274485
-280626
-286767
-292908
-299049
-305190
-311331
-317472
-323613
-329754
-335895
-342036
-348177
-354318
-360459
-366600
-372741
-378882
-385023
-391164
-397305
-403446
-409587
-415728
-421869
-428010
-434151
-440292
-446433
-452574
-458715
-464856
-470997
-477138
-483279
-489420
-495561
-501702
-507843
-513984
-520125
-526266
-532407
-538548
-544689
-550830
-556971
-563112
-569253
-575394
-581535
-587676
-593817
-599958
-606099
-612240
-618381
-624522
-630663
-636804
-642945
-649086
-655227
-661368
-667509
-673650
-679791
-685932
-692073
-698214
-704355
-710496
-716637
-722778
-728919
-735060
-741201
-747342
-753483
-759624
-765765
-771906
-778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:38) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum>qi):
	cont=dm+qm+qr
	acum=qi-cont
	cont=cont+1
print(acum)
-- OUTPUT:
1860
-4281
-10422
-16563
-22704
-28845
-34986
-41127
-47268
-53409
-59550
-65691
-71832
-77973
-84114
-90255
-96396
-102537
-108678
-114819
-120960
-127101
-133242
-139383
-145524
-151665
-157806
-163947
-170088
-176229
-182370
-188511
-194652
-200793
-206934
-213075
-219216
-225357
-231498
-237639
-243780
-249921
-256062
-262203
-268344
-274485
-280626
-286767
-292908
-299049
-305190
-311331
-317472
-323613
-329754
-335895
-342036
-348177
-354318
-360459
-366600
-372741
-378882
-385023
-391164
-397305
-403446
-409587
-415728
-421869
-428010
-434151
-440292
-446433
-452574
-458715
-464856
-470997
-477138
-483279
-489420
-495561
-501702
-507843
-513984
-520125
-526266
-532407
-538548
-544689
-550830
-556971
-563112
-569253
-575394
-581535
-587676
-593817
-599958
-606099
-612240
-618381
-624522
-630663
-636804
-642945
-649086
-655227
-661368
-667509
-673650
-679791
-685932
-692073
-698214
-704355
-710496
-716637
-722778
-728919
-735060
-741201
-747342
-753483
-759624
-765765
-771906
-778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:37) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum<qi):
	cont=dm+qm+qr
	acum=qi-cont
	cont=cont+1
print(acum)
-- OUTPUT:
1860
-4281
-10422
-16563
-22704
-28845
-34986
-41127
-47268
-53409
-59550
-65691
-71832
-77973
-84114
-90255
-96396
-102537
-108678
-114819
-120960
-127101
-133242
-139383
-145524
-151665
-157806
-163947
-170088
-176229
-182370
-188511
-194652
-200793
-206934
-213075
-219216
-225357
-231498
-237639
-243780
-249921
-256062
-262203
-268344
-274485
-280626
-286767
-292908
-299049
-305190
-311331
-317472
-323613
-329754
-335895
-342036
-348177
-354318
-360459
-366600
-372741
-378882
-385023
-391164
-397305
-403446
-409587
-415728
-421869
-428010
-434151
-440292
-446433
-452574
-458715
-464856
-470997
-477138
-483279
-489420
-495561
-501702
-507843
-513984
-520125
-526266
-532407
-538548
-544689
-550830
-556971
-563112
-569253
-575394
-581535
-587676
-593817
-599958
-606099
-612240
-618381
-624522
-630663
-636804
-642945
-649086
-655227
-661368
-667509
-673650
-679791
-685932
-692073
-698214
-704355
-710496
-716637
-722778
-728919
-735060
-741201
-747342
-753483
-759624
-765765
-771906
-778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:47:27) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
acum=0

while(acum<qi):
	cont=dm+qm+qr
	acum=qi-cont
	cont=cont+1
print(acum)
-- OUTPUT:
1860
-4281
-10422
-16563
-22704
-28845
-34986
-41127
-47268
-53409
-59550
-65691
-71832
-77973
-84114
-90255
-96396
-102537
-108678
-114819
-120960
-127101
-133242
-139383
-145524
-151665
-157806
-163947
-170088
-176229
-182370
-188511
-194652
-200793
-206934
-213075
-219216
-225357
-231498
-237639
-243780
-249921
-256062
-262203
-268344
-274485
-280626
-286767
-292908
-299049
-305190
-311331
-317472
-323613
-329754
-335895
-342036
-348177
-354318
-360459
-366600
-372741
-378882
-385023
-391164
-397305
-403446
-409587
-415728
-421869
-428010
-434151
-440292
-446433
-452574
-458715
-464856
-470997
-477138
-483279
-489420
-495561
-501702
-507843
-513984
-520125
-526266
-532407
-538548
-544689
-550830
-556971
-563112
-569253
-575394
-581535
-587676
-593817
-599958
-606099
-612240
-618381
-624522
-630663
-636804
-642945
-649086
-655227
-661368
-667509
-673650
-679791
-685932
-692073
-698214
-704355
-710496
-716637
-722778
-728919
-735060
-741201
-747342
-753483
-759624
-765765
-771906
-778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:23) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
acum=0

while(acum<qi):
	cont=dm+qm+qr
	acum=acum-(qi-cont)
	cont=cont+1
print(acum)
-- OUTPUT:
1860
-4281
-10422
-16563
-22704
-28845
-34986
-41127
-47268
-53409
-59550
-65691
-71832
-77973
-84114
-90255
-96396
-102537
-108678
-114819
-120960
-127101
-133242
-139383
-145524
-151665
-157806
-163947
-170088
-176229
-182370
-188511
-194652
-200793
-206934
-213075
-219216
-225357
-231498
-237639
-243780
-249921
-256062
-262203
-268344
-274485
-280626
-286767
-292908
-299049
-305190
-311331
-317472
-323613
-329754
-335895
-342036
-348177
-354318
-360459
-366600
-372741
-378882
-385023
-391164
-397305
-403446
-409587
-415728
-421869
-428010
-434151
-440292
-446433
-452574
-458715
-464856
-470997
-477138
-483279
-489420
-495561
-501702
-507843
-513984
-520125
-526266
-532407
-538548
-544689
-550830
-556971
-563112
-569253
-575394
-581535
-587676
-593817
-599958
-606099
-612240
-618381
-624522
-630663
-636804
-642945
-649086
-655227
-661368
-667509
-673650
-679791
-685932
-692073
-698214
-704355
-710496
-716637
-722778
-728919
-735060
-741201
-747342
-753483
-759624
-765765
-771906
-778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:14) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
acum=0

while(acum<qi):
	cont=dm+qm+qr
	acum=qi(acum+cont)
	cont=cont+1
print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    acum=qi(acum+cont)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:28) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
acum=0

while(acum<qi):
	cont=dm+qm+qr
	acum=qi-(acum+cont)
	cont=cont+1
print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    acum=qi(acum+cont)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:50:45) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
acum=0

while(acum<qi):
	cont=dm+qm+qr
	acum=qi-(acum+cont)
	cont=cont+1
print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    acum=qi(acum+cont)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:51:55) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=1
ac=0

while(acum<qi):
	cont=dm+qm+qr
	ac=qi-cont
	cont=cont+1
print(ac)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(acum<qi):
NameError: name 'acum' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:08) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(acum<qi):
	cont=dm+qm+qr
	ac=qi-cont
	cont=cont+1
print(ac)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(acum<qi):
NameError: name 'acum' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:34) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(ac<qi):
	cont=dm+qm+qr
	ac=qi-cont
	cont=cont+1
print(ac)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(acum<qi):
NameError: name 'acum' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:53:31) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(ac<qi):
	cont=dm+qm+qr
	ac=qi-(ac-cont)
	cont=cont+1
print(ac)
-- OUTPUT:
14140
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:54:13) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(ac<qi):
	cont=dm+qm+qr
	ac=qi-(ac-cont)
	cont=cont+1
print(ac)
-- EXECUTION TIME:
0.642497
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
14140
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
16265
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
10600
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:38) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(ac<qi):
	cont=dm+qm+qr
	ac=qi-(ac+cont)
	cont=cont+1
print(ac)
-- OUTPUT:
14140
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:55:08) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(ac<qi):
	cont=dm+qm+qr
	ac=(ac+cont)-qi
	cont=cont+1
print(ac)
-- OUTPUT:
14140
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:02) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(ac<qi):
	cont=dm+qm+qr
	ac=qi-(ac+cont)
	cont=cont+1
print(ac)
-- OUTPUT:
14140
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:37) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(ac<qi):
	cont=dm+qm+qr
	ac=qi-(qi-ac+cont)
	cont=cont+1
print(ac)
-- OUTPUT:
14140
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:49) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(ac<qi :
	cont=dm+qm+qr
	ac=qi-(ac+cont)
	cont=cont-1
print(ac)
-- ERROR:
File "XXXX", line 8
    while(ac<qi :
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:57) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(ac<qi :
	cont=dm+qm+qr
	ac=qi-(ac+cont)
	cont=cont+1
print(ac)
-- ERROR:
File "XXXX", line 8
    while(ac<qi :
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:11) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
acum=0

while(acum<qi):
	cont=cont+dm+qm+qr
	acum=qi-cont
	
	cont=cont+1
print(acum)
-- EXECUTION TIME:
711.462
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:12) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(ac<qi):
	cont=dm+qm+qr
	ac=(ac+cont)-qi
	cont=cont+1
print(ac)
-- EXECUTION TIME:
187.486
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:

-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:12) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(ac<qi):
	cont=dm+qm+qr
	ac=qi-(ac+cont)
	cont=cont+1
print(ac)
-- EXECUTION TIME:
222.276
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:

-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:

-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:12) 
-- CODE:
qi=int(input("qi: "))
dm=int(input("dm: "))
qm=int(input("qm: "))
qr=int(input("qr: "))
cont=0
ac=0

while(ac<qi):
	cont=dm+qm+qr
	ac=qi-cont
	cont=cont+1
print(ac)
-- EXECUTION TIME:
345.394
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:

-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:

-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
